zipkin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin-server
  labels:
    environment: dev
    app: zipkin-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin-server
  template:
    metadata:
      labels:
        app: zipkin-server
    spec:
      containers:
        - name: zipkin-server
          image: openzipkin/zipkin
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9411
